# cuda-kernel

./: .clang-format  .gitignore  CMakeLists.txt  README.md
GEMM/: 00_cublasGEMM.cu  01_naiveGEMM.cu  02_blockGEMM.cu  README.md  cpuGEMM.cu  naiveGEMM.cu  utils.cuh
common/: helper_cuda.cuh  helper_data.h
copy/: CMakeLists.txt  copy.cu  copy.h  main.cpp
elementwise/: CMakeLists.txt  elementwise.h  elementwise_add.cu  main.cpp
gemm/: CMakeLists.txt  case.cu  gemm.cu  gemm.h  gemm_cublas.cu  main.cpp
reduction/: CMakeLists.txt  main.cpp  reduction.cu  reduction.h  reduction_cub.cu
tools/: CMakeLists.txt  l2cache_bandwidth.cu
transpose/: CMakeLists.txt  main.cpp  transpose.cu  transpose.h  transpose_cublas.cu
